bug: Contain long text within table on small screen width

--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -7,6 +7,10 @@ body {
 	background-color: $bg-color;
 }
 
+table {
+	table-layout: fixed;
+}
+
 .portlet-topper {
 	z-index: 1;
 }
